--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ script:
  - ./gradlew clean
  - ./gradlew check
  - ./gradlew seleniumXvfb
+
+deploy:
+  provider: heroku
+  app: amazinggames # optional if it's the same as your repo name
+  api_key: "e259cfed-ca31-4ac7-bad6-787620b3561e"
