Connect Heroku and Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ script:
  - ./gradlew check
  - ./gradlew clean
  - ./gradlew seleniumXvfb
+
+deploy:
+ provider: heroku
+ app: amazinggames
+ api_key: e259cfed-ca31-4ac7-bad6-787620b3561e
+ strategy: git
