Trying to clean before deploy on heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ script:
  - ./gradlew clean
  - ./gradlew seleniumXvfb
 
+before_deploy:
+ - ./gradlew clean
 deploy:
  provider: heroku
  app: amazinggames
