--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ deploy:
  app: amazinggames
  api_key: e259cfed-ca31-4ac7-bad6-787620b3561e
  strategy: git
- on: all_branches: true
+ on: 
+  all_branches: true
