--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 script:
  - ./gradlew clean
  - ./gradlew check
- - ./gradlew doxygen
+ - ./gradlew doxyDoc
  - ./gradlew clean
  - ./gradlew seleniumXvfb
 
