Fixing that overalls.io will get out reports from jacoco

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ deploy:
  app: amazinggames
  api_key: e259cfed-ca31-4ac7-bad6-787620b3561e
  strategy: git
+ on: jacocoTestReportFix
+
+after_success:
+- ./gradlew jacocoTestReport coveralls
