--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ jacocoTestReport{
    
    reports {
 
-	xml.enabled false
+	xml.enabled true
         csv.enabled false
         html.destination "${buildDir}/jacocoHtml"
    }
